Resolve merge issues, add more unittests, update compactor API, and revise md files